gcc/testsuite/rust/rustc/ui/moves/move-out-of-slice-1.rs
#![feature(box_patterns)]

struct A;

fn main() {
    let a: Box<[A]> = Box::new([A]);
    match a { // { dg-error ".E0508." "" { target *-*-* } }
        box [a] => {},
        _ => {}
    }
}

